페이징 리스트 로직 테스트(boardSummary.html에 데이터담은 객체 전송 성공)까진 완료했음 다만 글 작성시 문제가 생김 하이버네이트 혹은 DB 설정변경 이슈로 추정됨 해당부분 확인 필요

--- a/src/main/resources/templates/board/reading/reading_normal.html
+++ b/src/main/resources/templates/board/reading/reading_normal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extend</title>
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/board_reading_market.css">
+    <link rel="stylesheet" href="/css/board_reading_normal.css">
     <link rel="stylesheet" href="/css/header.css">
     <!--Google Api-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
             <div class="mainframe">
                   <div class="main_content">
                         <div class="board_title">
-                            <span>장터게시판</span>
+                            <span>자유게시판</span>
                         </div>
                         <div class="content_body">
                             <div class="body_top">
@@ -43,23 +43,11 @@
                                     <div class="writing_time">
                                         6분전
                                     </div>
-                                    <div class="price_contact">
-                                        <div class="wrap_contact_div">
-                                            <div class="contact_main">
-                                                abcd@gmail.com
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div class="body_main">
                                 <div class="main_title">
                                     <p>진짜로 이제 뭐하냐</p>
-                                </div>
-                                <div class="wrap_price_div">
-                                    <div class="price_main">
-                                        68000원
-                                    </div>
                                 </div>
                                 <div class="bonmoon">
                                     <p>그래서 이제 뭐함</p>
@@ -120,7 +108,7 @@
                             </div>
                         </form>
                         <div class="list_button"> 
-                            <button type="button" class="list_button_inner" onclick="location.href='../board/market_board.html'"><span class="material-icons">list</span>글 목록</button>
+                            <button type="button" class="list_button_inner" onclick="location.href='../free_board.html'"><span class="material-icons">list</span>글 목록</button>
                         </div>
                   </div>
                   <div class="rank_board_div">
@@ -183,6 +171,5 @@
                   </div>
             </div>
       </div>
-
 </body>
 </html>
