--- a/src/main/resources/templates/board/reading/reading_qna.html
+++ b/src/main/resources/templates/board/reading/reading_qna.html
@@ -137,7 +137,7 @@
                             <input id="image" class="image" type="file" accept="image/*" name="image"/>
                         </form>
                         <div class="list_button"> 
-                            <button type="button" class="list_button_inner" onclick="location.href='../board/qna_board.html'"><span class="material-icons">list</span>글 목록</button>
+                            <button type="button" class="list_button_inner" onclick="location.href='../qna_board.html'"><span class="material-icons">list</span>글 목록</button>
                         </div>
                   </div>
                   <div class="rank_board_div">
