Board 글작성관련 문제로 id값에 대한 일부 설정 주석처리, 페이징 처리 한 페이지당 10개씩 보이게 변경

--- a/src/main/resources/templates/board/boardSummary.html
+++ b/src/main/resources/templates/board/boardSummary.html
@@ -34,7 +34,7 @@
 <div th:if="${boardSummaryPage.totalPages > 1}">
   <ul>
     <li th:each="pageNumber : ${#numbers.sequence(1, boardSummaryPage.totalPages)}">
-      <a th:href="@{/boards/{boardKind}(boardKind=${boardKind}, page=${pageNumber - 1})}" th:text="${pageNumber}"></a>
+      <a th:href="@{/board/{boardKind}(boardKind=${boardKind}, page=${pageNumber - 1})}" th:text="${pageNumber}"></a>
     </li>
   </ul>
 </div>
