--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -171,7 +171,7 @@
                         <div class="title" id="school_announcement">
                             자유게시판
                         </div>
-                        <a href="/board/free_board" class="more">
+                        <a href="/board/FREE" class="more">
                             더보기
                         </a>
                     </div>
@@ -189,7 +189,7 @@
                         <div class="title" id="school_announcement">
                             질문, 답변게시판
                         </div>
-                        <a href="/board/qna_board" class="more">
+                        <a href="/board/QNA" class="more">
                             더보기
                         </a>
                     </div>
@@ -207,7 +207,7 @@
                         <div class="title" id="school_announcement">
                             장터게시판
                         </div>
-                        <a href="/board/market_board" class="more">
+                        <a href="/board/MARKET" class="more">
                             더보기
                         </a>
                     </div>
