--- a/src/main/resources/templates/fragments/header-after.html
+++ b/src/main/resources/templates/fragments/header-after.html
@@ -21,15 +21,15 @@
                 </div>
                 <ul class="wrap_category">
                     <li class="main_category_mypage">
-                        <a href="/mypage/mypage_main" class="main_category_name">
+                        <a href="../mypage/mypage_main.html" class="main_category_name">
                             마이페이지
                         </a>
                         <div class="sub_category_mypage hide">
                             <div class="wrap_sub_category_mypage">
-                                <a href="/personal_info/personal_info_change" class="sub_menu_content">개인정보관리</a>
-                                <a href="javascript:void(0)" class="sub_menu_content">수강과목</a>
-                                <a href="/mypage/schedule" class="sub_menu_content">시간표</a>
-                                <a href="javascript:void(0)" class="sub_menu_content">즐겨찾기</a>
+                                <a href="../personal_info/personal_info_change.html" class="sub_menu_content">개인정보관리</a>
+                                <a href="../subject.html" class="sub_menu_content">수강과목</a>
+                                <a href="../mypage/schedule.html" class="sub_menu_content">시간표</a>
+                                <a href="../bookmark.html" class="sub_menu_content">즐겨찾기</a>
                             </div>
                         </div>
                     </li>
@@ -44,9 +44,9 @@
                         </a>
                         <div class="sub_category_community hide">
                             <div class="wrap_sub_category_community">
-                                <a href="/board/free_board" class="sub_menu_content">자유게시판</a>
-                                <a href="/board/qna_board" class="sub_menu_content">질문, 답변게시판</a>
-                                <a href="/board/market_board" class="sub_menu_content">장터게시판</a>
+                                <a href="/board/FREE" class="sub_menu_content">자유게시판</a>
+                                <a href="/board/QNA" class="sub_menu_content">질문, 답변게시판</a>
+                                <a href="/board/MARKET" class="sub_menu_content">장터게시판</a>
                             </div>
                         </div>
                     </li>
@@ -62,9 +62,9 @@
                     <li class="main_category">
                         <a href="/mypage/mypage_main" class="main_category_name">
                             <div class="profile">
-                                <img src="" alt="사진" class="profile_pic_alter">
+                                <img src="/img_source/anonymous.png" alt="사진" class="profile_pic_alter">
                                 <div class="user_nickname">
-                                    홍길동(임시이름)
+                                    최환규
                                 </div>
                             </div>
                         </a>
