--- a/src/main/resources/templates/board/reading/reading_normal.html
+++ b/src/main/resources/templates/board/reading/reading_normal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +21,12 @@
     <script defer src="/js/reading.js"></script>
 </head>
 <body>
-<!--여기에 헤더 삽입-->
+<header th:if="${loggedIn}">
+    <header th:include="/fragments/header-after"></header>
+</header>
+<header th:unless="${loggedIn}">
+    <header th:include="/fragments/header-before"></header>
+</header>
       <div class="wrap_mainframe">
             <div class="mainframe">
                   <div class="main_content">
@@ -30,69 +35,55 @@
                         </div>
                         <div class="content_body">
                             <div class="body_top">
-                                <img src="/tmp.jpg" class="profile_pic">
+                                <img th:if="${board.author == '익명'}" src="/img_source/anonymous.png" class="profile_pic">
+                                <img th:unless="${board.author == '익명'}" src="/tmp.jpg" class="profile_pic">
                                 <div class="name_time">
                                     <div class="namespace">
-                                        <div class="writer_name">
-                                            익명
-                                        </div>
-                                        <div class="report">
-                                            신고
-                                        </div>
+                                        <div class="writer_name" th:text="${board.author}">익명</div>
+                                        <div class="report">신고</div>
                                     </div>
-                                    <div class="writing_time">
-                                        6분전
-                                    </div>
+                                    <div class="writing_time" th:text="${formattedDate}">6분전</div>
                                 </div>
                             </div>
                             <div class="body_main">
                                 <div class="main_title">
-                                    <p>진짜로 이제 뭐하냐</p>
+                                    <p th:text="${board.title}">진짜로 이제 뭐하냐</p>
                                 </div>
                                 <div class="bonmoon">
-                                    <p>그래서 이제 뭐함</p>
-                                    <p>진짜로 그래서 이제 뭐함</p>
+                                    <p th:text="${board.content}">그래서 이제 뭐함</p>
+                                    <!-- 추가적인 본문 내용 -->
                                 </div>
                             </div>
                             <div class="body_counting">
                                 <span class="material-icons-outlined" style="color:#b63826;">favorite_border</span>
-                                <span class="recom_count">7&nbsp;</span>
+                                <span class="recom_count" th:text="${board.likeCnt}">7;</span>
                                 <span class="material-icons" style="color:#0d339a;">chat_bubble_outline</span>
-                                <span class="comment_count">10</span>
+                                <span class="comment_count" th:text="${board.chatCnt}">10</span>
                             </div>
                             <div class="body_button">
                                 <span class="material-icons-outlined" style="color:black;">favorite_border</span>
                                 <span>&nbsp;좋아요</span>
                             </div>
                         </div>
-                        <div class="comment">
-                            <div class="comment_div">
-                                <div class="comment_top">
-                                    <img src="/tmp.jpg" alt="" class="comment_profile_pic">
-                                    <div class="textspace">
-                                        <div class="name">
-                                            익명
-                                        </div>
-                                        <div class="likey_report">
-                                            <div class="likey">
-                                                좋아요
-                                            </div>
-                                            <div class="report">
-                                                신고
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="comment_body">
-                                    <div class="comment_main">
-                                        케로로장재미슴
-                                    </div>
-                                </div>
-                                <div class="time">
-                                    3분 전
-                                </div>
-                            </div>
-                        </div>
+                      <div th:each="comment : ${comments}" class="comment">
+                          <div class="comment_div">
+                              <div class="comment_top">
+                                  <img src="/tmp.jpg" alt="" class="comment_profile_pic">
+                                  <div class="textspace">
+                                      <div class="name" th:text="${comment.author}">익명</div>
+                                      <div class="likey_report">
+                                          <div class="likey">좋아요</div>
+                                          <div class="report">신고</div>
+                                      </div>
+                                  </div>
+                              </div>
+                              <div class="comment_body">
+                                  <div class="comment_main" th:text="${comment.content}">케로로장재미슴</div>
+                              </div>
+                              <!-- 댓글 작성 시간도 마찬가지로 포맷팅 필요 -->
+                              <div class="time">3분 전</div>
+                          </div>
+                      </div>
                         <form enctype="multipart/form-data">
                             <div class="comment_wrapping">
                                 <div class="comment_input">
@@ -107,8 +98,10 @@
                                 </div>
                             </div>
                         </form>
-                        <div class="list_button"> 
-                            <button type="button" class="list_button_inner" onclick="location.href='../free_board.html'"><span class="material-icons">list</span>글 목록</button>
+                        <div class="list_button">
+                            <button type="button" class="list_button_inner" th:data-board-kind="${boardKind}" onclick="location.href='/board/' + this.getAttribute('data-board-kind')">
+                                <span class="material-icons">list</span>글 목록
+                            </button>
                         </div>
                   </div>
                   <div class="rank_board_div">
@@ -171,5 +164,6 @@
                   </div>
             </div>
       </div>
+<footer th:include="/fragments/footer"></footer>
 </body>
 </html>
