각종페이지변경, 매핑

--- a/src/main/resources/templates/fragments/header-before.html
+++ b/src/main/resources/templates/fragments/header-before.html
@@ -18,20 +18,20 @@
                 </div>
                 <ul class="wrap_category">
                     <li class="main_category_mypage">
-                        <a href="../mypage/mypage_main.html" class="main_category_name">
+                        <a href="/mypage/mypage_main" class="main_category_name">
                             마이페이지
                         </a>
                         <div class="sub_category_mypage hide">
                             <div class="wrap_sub_category_mypage">
-                                <a href="../personal_info/personal_info_change.html" class="sub_menu_content">개인정보관리</a>
+                                <a href="/personal_info/personal_info_change" class="sub_menu_content">개인정보관리</a>
                                 <a href="../subject.html" class="sub_menu_content">수강과목</a>
-                                <a href="../mypage/schedule.html" class="sub_menu_content">시간표</a>
+                                <a href="/mypage/schedule" class="sub_menu_content">시간표</a>
                                 <a href="../bookmark.html" class="sub_menu_content">즐겨찾기</a>
                             </div>
                         </div>
                     </li>
                     <li class="main_category">
-                        <a href="../board/notice.html" class="main_category_name">
+                        <a href="/board/notice" class="main_category_name">
                             공지사항
                         </a>
                     </li>
