--- a/src/main/resources/templates/personal_info/personal_info_change.html
+++ b/src/main/resources/templates/personal_info/personal_info_change.html
@@ -93,7 +93,7 @@
                     <a href="javascript:void(0)" class="account_content_div">
                         문의하기
                     </a>
-                    <a href="/personal_info/site_notice" class="account_content_div">
+                    <a href="javascript:void(0)" class="account_content_div">
                         공지사항
                     </a>
                     <a href="/personal_info/serviceagreement" class="account_content_div">
