--- a/src/main/resources/templates/board/notice.html
+++ b/src/main/resources/templates/board/notice.html
@@ -17,7 +17,12 @@
           rel="stylesheet">
 </head>
 <body>
-<!--여기에 헤더 삽입-->
+<header th:if="${loggedIn}">
+    <header th:include="/fragments/header-after.html"></header>
+</header>
+<header th:unless="${loggedIn}">
+    <header th:include="/fragments/header-before.html"></header>
+</header>
     <div class="wrap_mainframe">
         <div class="mainframe">
             <div class="firstdivision">
@@ -33,58 +38,58 @@
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                아 오늘 시험 망했네
+                                [채용공고] 서일대학교 혁신지원사업단 전담직원 채용 공고
                             </div>
                             <div class="post_time">
-                                03/24
+                                09/25
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                난 라면먹고 잔다
+                                2023년 대학도서관 평가를 위한 이용자 만족도조사 실시(학생대상)
                             </div>
                             <div class="post_time">
-                                03/24
+                                09/15
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                옆방 너무 시끄러움
+                                [한국어교육원] 2023학년도 가을학기 교내 외국어 특강
                             </div>
                             <div class="post_time">
-                                03/24
+                                09/12
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                우리 축제에 누구옴?
+                                [채용공고] 일학습병행공동훈련센터 직원 채용 공고
                             </div>
                             <div class="post_time">
-                                03/24
+                                09/07
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                우리 축제에 누구옴?
+                                [채용공고] 서일대학교 산학협력단 직원 채용
                             </div>
                             <div class="post_time">
-                                03/24
+                                09/07
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                우리 축제에 누구옴?
+                                2023년 9월 각 군 현역병 모집계획
                             </div>
                             <div class="post_time">
-                                03/24
+                                08/28
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                우리 축제에 누구옴?
+                                학칙 일부개정에 따른 예고 및 의견 수렴
                             </div>
                             <div class="post_time">
-                                03/24
+                                08/23
                             </div>
                         </div>
                     </div>
@@ -97,64 +102,64 @@
                             <div class="title">
                                 학과 공지사항
                             </div>
-                            <a href="department_board.html" class="more">
+                            <a href="board/department_board" class="more">
                                 더보기
                             </a>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                아 오늘 시험 망했네
+                                2023학년도 2학기 휴학, 자퇴 안내 (2차)
                             </div>
                             <div class="post_time">
-                                03/24
+                                09/27
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                난 라면먹고 잔다
+                                2023학년도 2학기 재학생 수강신청 안내
                             </div>
                             <div class="post_time">
-                                03/24
+                                08/17
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                옆방 너무 시끄러움
+                                2023학년도 2학기 재학생 등록금 분할납부 안내
                             </div>
                             <div class="post_time">
-                                03/24
+                                08/11
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                우리 축제에 누구옴?
+                                2023학년도 2학기 재학생 등록금 납부 안내
                             </div>
                             <div class="post_time">
-                                03/24
+                                08/11
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                우리 축제에 누구옴?
+                                2023학년도 2학기 휴학, 자퇴 안내
                             </div>
                             <div class="post_time">
-                                03/24
+                                08/03
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                우리 축제에 누구옴?
+                                2023학년도 2학기 복학 신청 안내
                             </div>
                             <div class="post_time">
-                                03/24
+                                07/26
                             </div>
                         </div>
                         <div class="board_content">
                             <div class="board_post">
-                                우리 축제에 누구옴?
+                                2023학년도 2학기 전과 안내
                             </div>
                             <div class="post_time">
-                                03/24
+                                07/13
                             </div>
                         </div>
                     </div>
@@ -193,6 +198,6 @@
 
         </div>
     </div>
-
+<footer th:include="/fragments/footer.html"></footer>
 </body>
 </html>
