--- a/src/main/resources/templates/fragments/header-after.html
+++ b/src/main/resources/templates/fragments/header-after.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined"rel="stylesheet">
     <title>Title</title>
-    <link rel="stylesheet" href="/css/mainpage.css">
     <link rel="stylesheet" href="/css/header.css">
     <script defer src="/js/header.js"></script>
 </head>
@@ -21,14 +20,14 @@
                 </div>
                 <ul class="wrap_category">
                     <li class="main_category_mypage">
-                        <a href="../mypage/mypage_main.html" class="main_category_name">
+                        <a href="/mypage/mypage_main" class="main_category_name">
                             마이페이지
                         </a>
                         <div class="sub_category_mypage hide">
                             <div class="wrap_sub_category_mypage">
-                                <a href="../personal_info/personal_info_change.html" class="sub_menu_content">개인정보관리</a>
+                                <a href="/personal_info/personal_info_change" class="sub_menu_content">개인정보관리</a>
                                 <a href="../subject.html" class="sub_menu_content">수강과목</a>
-                                <a href="../mypage/schedule.html" class="sub_menu_content">시간표</a>
+                                <a href="/mypage/schedule" class="sub_menu_content">시간표</a>
                                 <a href="../bookmark.html" class="sub_menu_content">즐겨찾기</a>
                             </div>
                         </div>
