댓글기능 관련 각종 로직들

--- a/src/main/resources/templates/board/notice.html
+++ b/src/main/resources/templates/board/notice.html
@@ -32,7 +32,7 @@
                             <div class="title">
                                 학교 통합 공지사항
                             </div>
-                            <a href="school_integ_board.html" class="more">
+                            <a href="javascript:void(0)" class="more">
                                 더보기
                             </a>
                         </div>
@@ -102,7 +102,7 @@
                             <div class="title">
                                 학과 공지사항
                             </div>
-                            <a href="board/department_board" class="more">
+                            <a href="javascript:void(0)" class="more">
                                 더보기
                             </a>
                         </div>
