--- a/src/main/resources/templates/board/board_collection.html
+++ b/src/main/resources/templates/board/board_collection.html
@@ -32,7 +32,7 @@
                       <div class="title" id="school_announcement">
                           자유게시판
                       </div>
-                      <a href="/board/free_board" class="more">
+                      <a href="/board/FREE" class="more">
                           더보기
                       </a>
                   </div>
@@ -51,7 +51,7 @@
                       <div class="title" id="school_announcement">
                           질문, 답변게시판
                       </div>
-                      <a href="/board/qna_board" class="more">
+                      <a href="/board/QNA" class="more">
                           더보기
                       </a>
                   </div>
@@ -70,7 +70,7 @@
                       <div class="title" id="school_announcement">
                           장터게시판
                       </div>
-                      <a href="/board/market_board" class="more">
+                      <a href="/board/MARKET" class="more">
                           더보기
                       </a>
                   </div>
