--- a/src/main/resources/templates/fragments/header-before.html
+++ b/src/main/resources/templates/fragments/header-before.html
@@ -24,9 +24,9 @@
                         <div class="sub_category_mypage hide">
                             <div class="wrap_sub_category_mypage">
                                 <a href="/personal_info/personal_info_change" class="sub_menu_content">개인정보관리</a>
-                                <a href="../subject.html" class="sub_menu_content">수강과목</a>
+                                <a href="javascript:void(0)" class="sub_menu_content">수강과목</a>
                                 <a href="/mypage/schedule" class="sub_menu_content">시간표</a>
-                                <a href="../bookmark.html" class="sub_menu_content">즐겨찾기</a>
+                                <a href="javascript:void(0)" class="sub_menu_content">즐겨찾기</a>
                             </div>
                         </div>
                     </li>
