--- a/src/main/resources/static/css/board_reading_market2.css
+++ b/src/main/resources/static/css/board_reading_market2.css
@@ -37,7 +37,7 @@ body{
   }
 
   .wrap_mainframe .mainframe .main_content { 
-    width:896px;
+    width:872px;
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -108,7 +108,15 @@ body{
     font-size:12px;
   }
 
-  .wrap_mainframe .mainframe .main_content .content_body .body_top .name_time .writing_time{
+  .wrap_mainframe .mainframe .main_content .content_body .body_top .name_time .namespace .report .inner_button {
+    padding: 0 5px 0 5px;
+  }
+
+  .wrap_mainframe .mainframe .main_content .content_body .body_top .name_time .namespace .report .inner_button:last-child{
+    padding: 0 0 0 5px;
+  }
+
+.wrap_mainframe .mainframe .main_content .content_body .body_top .name_time .writing_time{
     width:800px;
     display:flex;
     justify-content:left;
@@ -285,7 +293,7 @@ body{
 
   .comment_div .comment_top .textspace {
     display : flex;
-    font-size:14px;
+    font-size:12px;
     justify-content:center;
     align-items:center;
     width:842px;
@@ -310,6 +318,18 @@ body{
   .comment_div .comment_top .textspace .likey_report .likey{
     padding-right:10px;
   }
+
+.comment_div .comment_top .textspace .likey_report .likey{
+  padding-right:10px;
+}
+
+.comment_div .comment_top .textspace .likey_report .report{
+  padding-right:10px;
+}
+
+.comment_div .comment_top .textspace .likey_report .delete{
+  padding-right:5px;
+}
 
   .comment_body {
     font-size:14px;
