--- a/src/main/resources/templates/board/writing/write.html
+++ b/src/main/resources/templates/board/writing/write.html
@@ -18,6 +18,7 @@
           rel="stylesheet">          
     <script defer src="/js/header.js" th:src="@{/js/header.js}"></script>
     <script defer src="/js/write.js" th:src="@{/js/write.js}"></script>
+    <script defer src="/js/referrer.js" th:src="@{/js/referrer.js}"></script>
 </head>
 <body>
 <!--여기에 헤더 삽입-->
