--- a/src/main/resources/css/board_reading_normal.css
+++ b/src/main/resources/css/board_reading_normal.css
@@ -314,6 +314,31 @@ body{
 
   .comment_div .time {
     font-size:12px;
+    display:flex;
+    width:872px;
+    height:25px;
+    justify-content:center;
+    align-items:center;
+  }
+
+  .comment_div .time .time_text {
+    width:436px;
+    display:flex;
+    justify-content:left;
+    align-items:center;
+
+  }
+
+  .comment_div .time .comment_likey_count {
+    width:436px;
+    display:flex;
+    justify-content:right;
+    align-items:center;
+    padding-right:5px;
+  }
+
+  .comment_div .time .comment_likey_count span {
+    font-size:12px;
   }
   /*댓글 끝*/
 
