--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -161,6 +161,7 @@ a:active{
     height:30px;
     border-radius:9px;
     font-size:12px;
+    margin-right:30px;
   }
 
   header .main-menu .login_register .register_button {
